--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Ubuntu:wght@300&display=swap')
+@import url('https://fonts.googleapis.com/css2?family=Poppins&family=Ubuntu:wght@300&display=swap');
 
 * {
     background-color: rgb(54, 48, 48);
     color:lightblue;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+.menu-container {
+    display: flex;
+    justify-content: center;
+
 }
