--- a/styles.css
+++ b/styles.css
@@ -13,3 +13,10 @@
     justify-content: center;
 
 }
+
+.menu {
+    border: 2px solid #fff;
+    width: 800px;
+    display: flex;
+    justify-content: space-between;
+}
