--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&family=Ubuntu:wght@300&display=swap');
 
 * {
-    background-color: rgb(54, 48, 48);
-    color:lightblue;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
 }
 
 .menu-container {
+    color: #fff;
+    background-color: #5995da;
+    padding: 20px 0;
     display: flex;
     justify-content: center;
-    margin: auto;
-    padding: auto;
 
 }
 
@@ -23,10 +22,15 @@
     justify-content: space-between;
 }
 
+.logo {
+    justify-content: flex-start;
+}
+
 .header-container {
+    color:#5995da;
+    background-color: #d6e9fe;
     display: flex;
     justify-content: center;
-    background-color: midnightblue;
 }
 
 .header{
@@ -39,7 +43,10 @@
 
 .header-text {
     align-self: flex-end;
-    margin-bottom: 20px;;
+    width: 200px;
+    height: 100px;
+
+
 }
 
 .header-item {
@@ -47,4 +54,44 @@
     justify-content: center;
     border: 1px solid #fff;
     
+}
+
+.body-container {
+    display: flex;
+    justify-content: center;
+}
+
+.main-body {
+    width: 900px;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row-reverse;
+    align-items: center;
+    margin: auto;
+    padding: 0px;
+}
+
+.body-item {
+    display: flex;
+    justify-content: center;
+    border: 1px solid #fff;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-between;
+}
+
+.footer-item {
+    border: 1px solid #fff;
+    background-color: #d6e9fe;
+    height: 200px;
+    flex: auto;
+}
+
+.footer-one, .footer-three {
+    background-color: #5995da;
+    flex: initial;
+    width: 300px;
 }
